# newbee-notebook

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  POSTMAN_GUIDE.md  README.md  README_en.md  docker-compose.gpu.yml  docker-compose.yml  main.py  medimind-guide.md  newbee-guide.md  postman_collection.json  pyproject.toml  pytest.ini  quickstart.md  requirements.txt
configs/: embeddings.yaml  mcp.example.json  storage.yaml
data/documents/: README.md
docker/api/: Dockerfile
docker/mineru/: Dockerfile.cpu  Dockerfile.gpu
docs-plan/: test-guide.md
docs/LLM-interface/: qwen-api-snapshot.md  qwen-chat-completions-snapshot.md  zhipu-async-chatCompletion.md  zhipu-chatCompletion.md
docs/ai-core-v1/: 02-directory-structure.md  04-api-design.md  05-document-reference-system.md  06-notebook-library-system.md  07-technical-decisions.md  08-error-handling.md  09-logging-monitoring.md  TEST_REPORT.md  streaming-protocol.md
docs/backend-v1/: 01-document-processing.md  01-goals-duty.md  02-api-supplement.md  02-architecture.md  03-context-enhancement.md  04-dfd-interface.md  05-test.md  README.md
docs/frontend-v1/: 01-tech-stack.md  02-architecture.md  03-components.md
docs/mvp/: architecture.md  phase1-infrastructure-summary.md  phase2-tools-summary.md  phase3-modes-summary.md  phase4-entry-summary.md  quick-start-infrastructure.md
docs/plans/: 2026-03-27-video-studio-implementation.md  2026-03-28-bilibili-credential-db-storage.md  2026-03-28-video-improve-1.md  2026-03-29-notebook-session-limit-design.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  quickstart.md  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/scripts/: README.md
medimind_agent/: exceptions.py
medimind_agent/api/: __init__.py  dependencies.py  main.py
medimind_agent/application/: __init__.py
medimind_agent/configs/: document_processing.yaml  embeddings.yaml  llm.yaml  logging.yaml  memory.yaml  modes.yaml  storage.yaml  zhipu_tools.yaml
medimind_agent/core/: __init__.py
medimind_agent/domain/: __init__.py
medimind_agent/infrastructure/: __init__.py
medimind_agent/scripts/: rebuild_es.py  rebuild_pgvector.py
newbee_notebook/: exceptions.py
scripts/: README.md  clean-doc.ps1  mineru_v4_smoke_test.py  rebuild_es.py  rebuild_pgvector.py  up-mineru.ps1  upload_documents.py
(+1198 files in other folders)
