[project]
name = "medimind-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "docx2txt==0.9",
    "faiss-cpu==1.12.0",
    "llama-index==0.14.0",
    "llama-index-embeddings-zhipuai==0.3.1",
    "llama-index-llms-openai>=0.5.6",
    "llama-index-llms-zhipuai==0.4.1",
    "llama-index-readers-file==0.5.4",
    "llama-index-vector-stores-elasticsearch==0.5.1",
    "llama-index-vector-stores-faiss==0.5.1",
    "llama-index-vector-stores-postgres>=0.7.2",
    "numpy==2.2.6",
    "openpyxl==3.1.5",
    "pandas<2.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.12.3",
    "pytest>=9.0.1",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "sentence-transformers==5.1.1",
    "tavily-python>=0.7.17",
    "tiktoken==0.12.0",
    "torch==2.9.0",
    "transformers==4.57.1",
    "xlrd>=2.0.0",
]
