[project]
name = "newbee-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "av>=17.0.0",
    "asyncpg>=0.31.0",
    "bilibili-api-python>=17.4.1",
    "celery>=5.6.2",
    "docx2txt==0.9",
    "faiss-cpu==1.12.0",
    "fastapi>=0.128.0",
    "llama-index-core==0.14.15",
    "llama-index-embeddings-openai==0.5.1",
    "llama-index-llms-openai>=0.5.6",
    "llama-index-readers-file==0.5.4",
    "llama-index-vector-stores-elasticsearch==0.5.1",
    "llama-index-vector-stores-faiss==0.5.1",
    "llama-index-vector-stores-postgres>=0.7.2",
    "markitdown[all,pdf]==0.1.4",
    "mcp==1.26.0",
    "minio>=7.2.0,<8",
    "numpy==2.2.6",
    "openpyxl==3.1.5",
    "pandas<2.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.12.3",
    "pytest>=9.0.1",
    "python-dotenv==1.1.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.21",
    "pyyaml==6.0.3",
    "qrcode[pil]>=8.2",
    "redis>=7.1.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "sentence-transformers==5.1.1",
    "sqlalchemy>=2.0.44",
    "tavily-python>=0.7.17",
    "tiktoken==0.12.0",
    "torch==2.9.0",
    "transformers==4.57.1",
    "uvicorn>=0.40.0",
    "xlrd>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["newbee_notebook*"]
